--- a/backend/package.json
+++ b/backend/package.json
@@ -15,5 +15,12 @@
   "bugs": {
     "url": "https://github.com/FakanBalint/SzFMMini/issues"
   },
-  "homepage": "https://github.com/FakanBalint/SzFMMini#readme"
+  "homepage": "https://github.com/FakanBalint/SzFMMini#readme",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.1.0"
+  }
 }
