--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,3 @@
 PORT=6969
+CONNECTION_STRING="mongodb+srv://treesimulatorapp:acypil3m93GGbeJY@cluster0.7rmicev.mongodb.net/?retryWrites=true&w=majority"
+JWT_SECRET='G!Fv2Kb&ZbT#Fj8s$Pc@Hd*LwNp3RtVw'
