--- a/backend/package.json
+++ b/backend/package.json
@@ -18,9 +18,11 @@
   },
   "homepage": "https://github.com/FakanBalint/SzFMMini#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.1.0"
+    "mongodb": "^6.1.0",
+    "morgan": "^1.10.0"
   }
 }
