--- a/backend/application-server/package.json
+++ b/backend/application-server/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/FakanBalint/SzFMMini#readme",
   "dependencies": {
+    "axios": "^1.5.1",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
