--- a/backend/auth-server/package.json
+++ b/backend/auth-server/package.json
@@ -4,7 +4,8 @@
   "description": "Authentication Server",
   "main": "authServer.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start-auth": "nodemon authServer.js"
   },
   "author": "Dobos Patrik",
   "license": "ISC",
@@ -14,6 +15,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.1.0"
+    "mongodb": "^6.1.0",
+    "morgan": "^1.10.0",
+    "nodemon": "^3.0.1"
   }
 }
