--- a/backend/auth-server/package.json
+++ b/backend/auth-server/package.json
@@ -10,6 +10,8 @@
   "author": "Dobos Patrik",
   "license": "ISC",
   "dependencies": {
+    "joi": "^17.10.2",
+    "nodemon": "^3.0.1",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -17,7 +19,6 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.1.0",
-    "morgan": "^1.10.0",
-    "nodemon": "^3.0.1"
+    "morgan": "^1.10.0"
   }
 }
